# MumbleRust

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: github-actions-cargo.yml
src/: main.rs  utils.rs
src/mumble/: mod.rs  mumble.rs
src/mumble_parser/: mod.rs  network.rs  tests.rs
src/protos/: Mumble.proto
src/utils/: networking.rs
