[package]
name = "mumble_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2"
tokio = { version = "1.21.0", features = ["full"] }
tokio-native-tls = "0.3.0"
serde_json = "1.0.85"
tokio-util = { version = "0.7.3", features=["codec", "net"] }
tokio-stream = "0.1.9"
protobuf = "3.1.0"
byteorder = "1.4.3"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"

[build-dependencies]
protobuf-codegen = "3.1.0"
protoc-bin-vendored = "3.0.0"

[dev-dependencies]
test-case = "2.2.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
# codegen-units = 1